--- a/Przelicznik_walutowy/nbproject/project.properties
+++ b/Przelicznik_walutowy/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -30,12 +29,17 @@ dist.jar=${dist.dir}/Przelicznik_walutowy.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.ormlite-core-5.1.jar=D:\\Pobierane z chrome\\ormlite-core-5.1.jar
+file.reference.ormlite-jdbc-5.1.jar=D:\\Pobierane z chrome\\ormlite-jdbc-5.1.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${libs.PostgreSQLDriver.classpath}:\
+    ${file.reference.ormlite-jdbc-5.1.jar}:\
+    ${file.reference.ormlite-core-5.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -100,6 +104,7 @@ manifest.custom.codebase=*
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${dist.jar}:\
